examples/test/testpolicy15652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15652
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key44: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value24
          key8: value16
          key16: value44
      podSelector:
        matchLabels:
          key27: value27
          key49: value17
          key26: value2
